[package]
name = "kuska_ssb_play"
version = "0.1.0"
authors = ["mycognosist <gnomad@cryptolab.net>"]
edition = "2018"

[dependencies]
async-std = { version = "1.5.0", features=["unstable", "attributes"] }
kuska-ssb = { git = "https://github.com/Kuska-ssb/ssb", branch = "master" }
serde_json = { version = "1.0.48", features = ["preserve_order", "arbitrary_precision"] }
